--- a/김영한 스프링 - 입문편/hello-spring/hello-spring/build.gradle
+++ b/김영한 스프링 - 입문편/hello-spring/hello-spring/build.gradle
@@ -12,11 +12,15 @@ java {
 }
 
 repositories {
-	mavenCentral()
+	mavenCentral() // 라이브러리들을 mavenCentral 에서 다운받아라라는 의미이다.
 }
+
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	//implementation 'org.springframework.boot:spring-boot-starter-jdbc' // db를 사용하려면 jdbc가 꼭 필요하다
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // jdbc 포함
+	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
