--- a/김영한 MVC - 1편/servlet/build.gradle
+++ b/김영한 MVC - 1편/servlet/build.gradle
@@ -24,7 +24,11 @@ repositories {
 
 dependencies {
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	implementation 'javax.servlet:jstl'
+	//implementation 'javax.servlet:jstl' //스프링부트 3.0 미만
+	implementation 'jakarta.servlet:jakarta.servlet-api' //스프링부트 3.0 이상
+	implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api' //스프링부트 3.0 이상
+	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl' //스프링부트 3.0 이상
+//	implementation 'javax.servlet:jstl'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
