--- a/김영한 MVC - 1편 하/src/main/resources/errors.properties
+++ b/김영한 MVC - 1편 하/src/main/resources/errors.properties
@@ -13,5 +13,13 @@ max = \uCD5C\uB300\uAC12\uC744 \uBC97\uC5B4\uB0AC\uC2B5\uB2C8\uB2E4.
 
 
 # \uCD94\uAC00
-typeMismatch.java.lang.Integer = \uC22B\uC790\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
-typeMismatch = \uD0C0\uC785 \uC624\uB958\uC785\uB2C8\uB2E4.
+typeMismatch.java.lang.Integer = \uC22B\uC790\uB97C \uC785\uB825 \uD574\uC8FC\uC138\uC694.
+typeMismatch = \uD0C0\uC785 \uC624\uB958 \uC785\uB2C8\uB2E4.
+
+#Bean Validation \uCD94\uAC00
+
+NotBlank.item.itemName = \uC0C1\uD488 \uC774\uB984\uC744 \uC791\uC131 \uD574\uC8FC\uC138\uC694.
+
+NotBlank={0} \uACF5\uBC31X
+Range={0}, {2} ~ {1} \uD5C8\uC6A9
+Max={0}, \uCD5C\uB300 {1}
