--- a/김영한 DB - 2편 상/build.gradle
+++ b/김영한 DB - 2편 상/build.gradle
@@ -20,9 +20,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+//	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	//MYBatis 추가
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
+//	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1'
+
+	//JAP, 스프링 데이터 JPA 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
